--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
     "fs": "^0.0.1-security",
     "os": "^0.1.2",
     "path": "^0.12.7",
