--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Theorox Studios",
-  "name": "Theorox Studios",
+  "short_name": "Beyond UX",
+  "name": "Beyond UX",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
