--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "firebase": "^10.0.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
     "fs": "^0.0.1-security",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase-tools": "^12.4.3"
   }
 }
